Spacing CSS Issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,7 +37,7 @@ h4 {
 }
 
 .form-control {
-  margin: 15px 0 15px 20px;
+  margin: 15px 0 15px 15px;
 }
 
 .repository {
@@ -83,8 +83,8 @@ h4 {
   font-family: "Quicksand", sans-serif;
 }
 .weather-forecast {
-  margin-top: 20px;
-  margin: 0 0 15px 80px;
+  margin: 0 0 15px 0;
+  display: block;
   text-align: center;
   font-family: "Be Vietnam Pro", sans-serif;
 }
@@ -100,7 +100,7 @@ h4 {
 
 #current-location-button {
   font-size: 14px;
-  margin: 17px 0 0 10px;
+  margin: 17px 0 0 0;
   padding: 5px 15px;
   background-color: #212529;
   color: white;
@@ -120,7 +120,7 @@ h4 {
 #search-button {
   font-size: 14px;
   padding: 5px 15px;
-  margin: 17px 2px 0 15px;
+  margin: 17px 0 0 5px;
   background-color: #212529;
   color: white;
   opacity: 0.6;
